refactor: remove unused SCSS files and update theme colors for consistency

--- a/apps/site/src/assets/styles/theme.css
+++ b/apps/site/src/assets/styles/theme.css
@@ -138,7 +138,7 @@ This palette was studied with the help of tints.dev
     --color-inverse-primary: var(--color-sw-navy-50);
     --color-inverse-on-primary: var(--color-sw-navy-400);
 
-    --color-secondary: var(--color-sw-azure-200);
+    --color-secondary: var(--color-sw-azure-400);
     --color-on-secondary: var(--color-sw-azure-950);
     --color-secondary-container: var(--color-sw-azure-100);
     --color-on-secondary-container: var(--color-sw-azure-900);
@@ -146,8 +146,8 @@ This palette was studied with the help of tints.dev
     --color-inverse-secondary: var(--color-sw-azure-950);
     --color-inverse-on-secondary: var(--color-sw-azure-200);
 
-    --color-accent: var(--color-sw-curious-300);
-    --color-on-accent: var(--color-sw-curious-950);
+    --color-accent: var(--color-sw-curious-400);
+    --color-on-accent: var(--color-sw-curious-800);
     --color-accent-container: var(--color-sw-curious-200);
     --color-on-accent-container: var(--color-sw-curious-900);
 
@@ -183,7 +183,7 @@ This palette was studied with the help of tints.dev
     --color-inverse-on-primary: var(--color-sw-flamingo-200);
 
     --color-secondary: var(--color-sw-plum-300);
-    --color-on-secondary: var(--sw-plum-950);
+    --color-on-secondary: var(--color-sw-plum-950);
     --color-secondary-container: var(--color-sw-plum-200);
     --color-on-secondary-container: var(--color-sw-plum-900);
 
@@ -199,54 +199,130 @@ This palette was studied with the help of tints.dev
     --color-inverse-on-accent: var(--color-sw-pinkish-200);
 }
 
+h1 {
+    @apply text-3xl font-black;
+}
+
+h2 {
+    @apply text-2xl font-extrabold;
+}
+
+h3 {
+    @apply text-xl font-bold;
+}
+
+h4 {
+    @apply text-lg font-semibold;
+}
+
+h5 {
+    @apply text-lg font-semibold;
+}
+
+h6 {
+    @apply text-lg font-semibold;
+}
+
+a {
+    @apply text-primary cursor-pointer font-bold underline transition-colors duration-500;
+
+    &:hover {
+        @apply text-accent transition-colors duration-500;
+    }
+}
+
+ul {
+    @apply mr-4 list-disc pl-8;
+
+    li {
+        @apply text-base font-normal;
+    }
+}
+
+table {
+    @apply bg-surface-container overflow-hidden rounded-2xl;
+
+    tbody {
+        tr {
+            @apply border-surface-dim border-t;
+        }
+    }
+
+    tr {
+        &:nth-child(even) {
+            @apply bg-surface-container-high;
+        }
+
+        @apply bg-surface-container transition-all;
+
+        &:hover {
+            @apply bg-surface-container-highest transition-all;
+        }
+    }
+
+    th {
+        @apply p-4;
+    }
+
+    td {
+        @apply p-4;
+    }
+}
+
+html {
+    ::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+
+    ::-webkit-scrollbar-button {
+        width: 0;
+        height: 0;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #e1e1e1;
+        border: 0 none #fff;
+        border-radius: 50px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #fff;
+    }
+
+    ::-webkit-scrollbar-thumb:active {
+        background: #000;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: #666;
+        border: 0 none #fff;
+        border-radius: 50px;
+    }
+
+    ::-webkit-scrollbar-track:hover {
+        background: #666;
+    }
+
+    ::-webkit-scrollbar-track:active {
+        background: #333;
+    }
+
+    ::-webkit-scrollbar-corner {
+        background: transparent;
+    }
+}
+
+.subtitle {
+    @apply font-mono;
+}
+
 .sw-container {
-    @apply flex w-full max-w-6xl;
+    @apply mx-auto flex w-full max-w-7xl px-4;
 }
 
 .display {
     @apply text-9xl font-black;
-}
-
-h1 {
-    @apply text-5xl font-extrabold;
-}
-
-h2 {
-    @apply text-4xl font-bold;
-}
-
-h3 {
-    @apply text-xl font-semibold;
-}
-
-h4 {
-    @apply text-lg font-bold;
-}
-
-h5 {
-    @apply text-base font-bold;
-}
-
-h6 {
-    @apply text-base font-bold;
-}
-
-p {
-    a {
-        @apply transition-colors duration-500;
-
-        &:hover {
-            @apply transition-colors duration-500;
-        }
-    }
-}
-
-ul  {
-    @apply list-disc mr-4 pl-8;
-    
-    li {
-        @apply text-base font-normal;
-    }
 }
 
 .sw-text-gradient {
