--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -1,12 +1,12 @@
 ---
-import DividerArrowDown from '@common/dividers/DividerArrowDown.astro';
+
 ---
 
 <footer
     class='flex flex-col w-full pt-8 text-sm items-center bg-surface-dim text-on-surface shadow-2xl relative'
-    style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
+    style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%)'
 >
-    <div class='flex flex-row container justify-between mt-4'>
+    <div class='flex flex-row sw-container justify-between mt-4'>
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Portfolio</h5>
             <ul>
@@ -36,7 +36,7 @@ import DividerArrowDown from '@common/dividers/DividerArrowDown.astro';
         </div>
     </div>
     <div class='flex flex-col w-full py-8 mt-8 items-center bg-inverse-surface text-inverse-on-surface'>
-        <div class='container text-center'>
+        <div class='sw-container text-center'>
             <p>© Space Wizard Studios - Todos os direitos reservados</p>
         </div>
     </div>
