feat: enhance design system layout and improve project pages structure

--- a/apps/site/src/pages/design_system.astro
+++ b/apps/site/src/pages/design_system.astro
@@ -24,103 +24,186 @@ const AccentBox = ({ className = '' }) => {
 ---
 
 <Layout>
-    <div class='flex flex-col w-full justify-center items-center gap-4'>
-        <div class='flex flex-col w-full p-4 gap-4 bg-surface-dim text-on-surface rounded-lg justify-between'>
-            <p>bg-surface-dim</p>
-            <p>text-on-surface</p>
+    <div class='sw-container flex flex-col space-y-10'>
+        <div class='flex flex-col py-8 space-y-4'>
+            
+            <header class='flex flex-col space-y-2'>
+                <h2 class='uppercase text-on-surface'>Design System</h2>
+                <h3 class='sw-text-gradient from-primary to-accent'>Pré visualização do sistema bonito :)</h3>
+            </header>
 
-            <div class='flex flex-row w-full gap-4'>
-                <div class='flex-1'>
-                    <Fragment set:html={PrimaryBox({})} />
-                </div>
-                <div class='flex-1'>
-                    <Fragment set:html={SecondaryBox({})} />
-                </div>
-                <div class='flex-1'>
-                    <Fragment set:html={AccentBox({})} />
-                </div>
+            <!-- Typography -->
+            <div class='flex flex-col w-full p-4 gap-4 bg-surface-dim text-on-surface rounded-lg justify-between'>
+                <table class='w-full text-left'>
+                    <thead>
+                        <tr>
+                            <th>Size</th>
+                            <th>Sample</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><h1>H1</h1></td>
+                            <td><h1>The quick brown fox jumps over the lazy dog.</h1></td>
+                        </tr>
+                        <tr>
+                            <td><h2>H2</h2></td>
+                            <td><h2>The quick brown fox jumps over the lazy dog.</h2></td>
+                        </tr>
+                        <tr>
+                            <td><h3>H3</h3></td>
+                            <td><h3>The quick brown fox jumps over the lazy dog.</h3></td>
+                        </tr>
+                        <tr>
+                            <td><h4>H4</h4></td>
+                            <td><h4>The quick brown fox jumps over the lazy dog.</h4></td>
+                        </tr>
+                        <tr>
+                            <td><h5>H5</h5></td>
+                            <td><h5>The quick brown fox jumps over the lazy dog.</h5></td>
+                        </tr>
+                        <tr>
+                            <td><h6>H6</h6></td>
+                            <td><h6>The quick brown fox jumps over the lazy dog.</h6></td>
+                        </tr>
+                        <tr>
+                            <td><p>Paragraph</p></td>
+                            <td><p>The quick brown fox jumps over the lazy dog.</p></td>
+                        </tr>
+                        <tr>
+                            <td><p>Link</p></td>
+                            <td><a>The quick brown fox jumps over the lazy dog.</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
-        </div>
+            <div class='flex flex-col w-full p-4 gap-4 bg-surface-dim text-on-surface rounded-lg justify-between'>
+                <p>bg-surface-dim</p>
+                <p>text-on-surface</p>
 
-        <div class='flex flex-col w-full p-4 gap-4 bg-surface text-on-surface rounded-lg justify-between'>
-            <p>bg-surface</p>
-            <p>text-on-surface</p>
-
-            <div class='flex flex-col w-full gap-4 bg-primary-container text-on-primary-container p-4 rounded-lg'>
-                <div class='flex flex-col w-full gap-4'>
-                    <p>bg-primary-container</p>
-                    <p>text-on-primary-container</p>
-                    <div class='flex flex-row w-full gap-4'>
-                        <div class='flex-1'>
-                            <Fragment set:html={PrimaryBox({})} />
-                        </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={SecondaryBox({})} />
-                        </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={AccentBox({})} />
-                        </div>
+                <div class='flex flex-row w-full gap-4'>
+                    <div class='flex-1'>
+                        <Fragment set:html={PrimaryBox({})} />
+                    </div>
+                    <div class='flex-1'>
+                        <Fragment set:html={SecondaryBox({})} />
+                    </div>
+                    <div class='flex-1'>
+                        <Fragment set:html={AccentBox({})} />
                     </div>
                 </div>
             </div>
 
-            <div class='flex flex-col w-full gap-4 bg-secondary-container text-on-secondary-container p-4 rounded-lg'>
-                <div class='flex flex-col w-full gap-4'>
-                    <p>bg-secondary-container</p>
-                    <p>text-on-secondary-container</p>
-                    <div class='flex flex-row w-full gap-4'>
-                        <div class='flex-1'>
-                            <Fragment set:html={PrimaryBox({})} />
-                        </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={SecondaryBox({})} />
-                        </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={AccentBox({})} />
-                        </div>
+            <div class='flex flex-col w-full p-4 gap-4 bg-surface-bright text-on-surface rounded-lg justify-between'>
+                <p>bg-surface-bright</p>
+                <p>text-on-surface</p>
+
+                <div class='flex flex-row w-full gap-4'>
+                    <div class='flex-1'>
+                        <Fragment set:html={PrimaryBox({})} />
+                    </div>
+
+                    <div class='flex-1'>
+                        <Fragment set:html={SecondaryBox({})} />
+                    </div>
+
+                    <div class='flex-1'>
+                        <Fragment set:html={AccentBox({})} />
                     </div>
                 </div>
             </div>
 
-            <div class='flex flex-col w-full gap-4 bg-accent-container text-on-accent-container p-4 rounded-lg'>
+            <div class='flex flex-col w-full p-4 gap-4 bg-surface text-on-surface rounded-lg justify-between'>
+                <p>bg-surface</p>
+                <p>text-on-surface</p>
+
                 <div class='flex flex-col w-full gap-4'>
-                    <p>bg-accent-container</p>
-                    <p>text-on-accent-container</p>
-                    <div class='flex flex-row w-full gap-4'>
-                        <div class='flex-1'>
-                            <Fragment set:html={PrimaryBox({})} />
+                    <div class='flex flex-row w-full gap-4 bg-surface-container-lowest text-on-surface p-4 rounded-lg'>
+                        <p>bg-surface-container-lowest</p>
+                        <p>text-on-surface</p>
+
+                        <div class='flex flex-row w-full gap-4 bg-surface-container-low text-on-surface p-4 rounded-lg'>
+                            <p>bg-surface-container-low</p>
+                            <p>text-on-surface</p>
                         </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={SecondaryBox({})} />
+
+                        <div class='flex flex-row w-full gap-4 bg-surface-container text-on-surface p-4 rounded-lg'>
+                            <p>bg-surface-container</p>
+                            <p>text-on-surface</p>
                         </div>
-                        <div class='flex-1'>
-                            <Fragment set:html={AccentBox({})} />
+
+                        <div
+                            class='flex flex-row w-full gap-4 bg-surface-container-high text-on-surface p-4 rounded-lg'
+                        >
+                            <p>bg-surface-container-high</p>
+                            <p>text-on-surface</p>
+                        </div>
+
+                        <div
+                            class='flex flex-row w-full gap-4 bg-surface-container-highest text-on-surface p-4 rounded-lg'
+                        >
+                            <p>bg-surface-container-highest</p>
+                            <p>text-on-surface</p>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </div>
-
-        <div class='flex flex-col w-full p-4 gap-4 bg-surface-bright text-on-surface rounded-lg justify-between'>
-            <p>bg-surface-bright</p>
-            <p>text-on-surface</p>
-
-            <div class='flex flex-row w-full gap-4'>
-                
-                <div class='flex-1'>
-                    <Fragment set:html={PrimaryBox({})} />
+                <div class='flex flex-col w-full gap-4 bg-primary-container text-on-primary-container p-4 rounded-lg'>
+                    <div class='flex flex-col w-full gap-4'>
+                        <p>bg-primary-container</p>
+                        <p>text-on-primary-container</p>
+                        <div class='flex flex-row w-full gap-4'>
+                            <div class='flex-1'>
+                                <Fragment set:html={PrimaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={SecondaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={AccentBox({})} />
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class='flex-1'>
-                    <Fragment set:html={SecondaryBox({})} />
+                <div
+                    class='flex flex-col w-full gap-4 bg-secondary-container text-on-secondary-container p-4 rounded-lg'
+                >
+                    <div class='flex flex-col w-full gap-4'>
+                        <p>bg-secondary-container</p>
+                        <p>text-on-secondary-container</p>
+                        <div class='flex flex-row w-full gap-4'>
+                            <div class='flex-1'>
+                                <Fragment set:html={PrimaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={SecondaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={AccentBox({})} />
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class='flex-1'>
-                    <Fragment set:html={AccentBox({})} />
+                <div class='flex flex-col w-full gap-4 bg-accent-container text-on-accent-container p-4 rounded-lg'>
+                    <div class='flex flex-col w-full gap-4'>
+                        <p>bg-accent-container</p>
+                        <p>text-on-accent-container</p>
+                        <div class='flex flex-row w-full gap-4'>
+                            <div class='flex-1'>
+                                <Fragment set:html={PrimaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={SecondaryBox({})} />
+                            </div>
+                            <div class='flex-1'>
+                                <Fragment set:html={AccentBox({})} />
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
 
         </div>
