--- a/apps/site/src/pages/projects/[slug].astro
+++ b/apps/site/src/pages/projects/[slug].astro
@@ -1,41 +1,21 @@
 ---
-import Layout from '@layouts/ProjectLayout.astro'
-import type { MetaSEO } from 'types/metaseo'
+import { getAllProjects } from '@helpers/projectHelpers';
+import Layout from '@layouts/PageLayout.astro';
 
-// export async function getStaticPaths() {
-// 	const all = await Astro.glob('/src/content/projects/*.md');
-// 	return all.map(({ file, ...page }) => ({
-// 		params: {
-// 			slug: getSlugFromURL(file),
-// 		},
+export async function getStaticPaths() {
+    const processedProjects = await getAllProjects();
 
-// 		props: {
-// 			page: {
-// 				...page,
-// 			},
-// 		},
-// 	}));
-// }
+    return processedProjects.map((project) => ({
+        params: { slug: project.slug },
+        props: { project },
+    }));
+}
 
-// const { page } = Astro.props;
-
-// const meta: MetaSEO = {
-// 	title: page.frontmatter.title,
-// 	description: page.frontmatter.description,
-// 	image: page.frontmatter.heroSrc,
-// 	canonical: Astro.url.toString(),
-// 	ogType: 'article',
-// };
+const { project } = Astro.props;
 ---
 
-<Layout>
-  <!-- <Layout
-	meta={meta}
-	heroSrc={page.frontmatter.heroSrc}
-	heroTitle={page.frontmatter.heroTitle}
-	heroAltText={page.frontmatter.heroAltText}
-	carousel={page.frontmatter.carousel}
-	partners={page.frontmatter.partners}
->
-	<page.Content components={components} /> -->
+<Layout meta={{ title: project.data.title }}>
+    <div class='sw-container py-8'>
+        <h1>{project.data.title}</h1>
+    </div>
 </Layout>
